--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    margin: -10% 0 0 0; /* Move o body 10% para cima */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,6 +15,16 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
+}
+
+.game-content-wrapper {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .main-game-area {
